login and register page implemented

--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,6 +1,3 @@
-<ul>
-  <li><a routerLink="registration">Registration</a></li>
-  <li><a routerLink="login">Login</a></li>
-  <li>{{ this.test }}</li>
-</ul>
-<router-outlet />
+<div class="app-container">
+  <router-outlet></router-outlet>
+</div>
